# s32k144-virtual-soc-domain-controller

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  NOTICE  README.md
.clinerules/: default-rules.md
config/: domain_config.yaml
docs/: AUTOSAR_学习路线图.md  CAN从零到驱动.md  MCU_交叉编译与烧录指南.md  MCU零基础学习计划.md  S32K144_DRV_层开发指南.md  TaskPlan.md  VehicleGateway_Design.md  usbcan_device_info.md  从零学CAN.md
mcu/: Makefile  s32k144_flash.ld
mcu/S32_SDK_S32K1xx_RTM_4.0.2/examples/S32K144/demo_apps/adc_low_power/: .cproject  .project
mcu/S32_SDK_S32K1xx_RTM_4.0.2/examples/S32K144/demo_apps/ammclib/: .cproject  .project
mcu/adc/: Makefile  README.md
mcu/adc/src/: adc_driver.c  main.c
mcu/clock/: Makefile  README.md
mcu/clock/include/: clock_driver.h
mcu/clock/src/: clock_driver.c  main.c
mcu/flexcan/: Makefile  README.md
mcu/flexcan/include/: flexcan_driver.h
mcu/flexcan/src/: flexcan_driver.c  main.c
mcu/gpio/: Makefile  README.md
mcu/gpio/src/: gpio_driver.c  main.c  startup.c
mcu/include/: adc.h  clock.h  flexcan.h  gpio.h  timer.h  uart.h
mcu/mcal/: GpioDrv.c  GpioDrv.h  McuDrv.c  McuDrv.h
mcu/src/: adc.c  clock.c  flexcan.c  gpio.c  main.c  timer.c  uart.c
mcu/timer/: Makefile  README.md
mcu/timer/src/: main.c  timer_driver.c
mcu/uart/: Makefile  README.md
mcu/uart/src/: main.c  uart_driver.c
soc/: CMakeLists.txt
soc/include/: can_manager.h  config_manager.h  signal_manager.h
soc/src/: main.cpp
soc/src/can_manager/: can_manager.cpp
soc/src/signal_fusion/: config_manager.cpp  signal_manager.cpp
tools/: mcu_flash.sh  soc_build.sh
(+118 files in other folders)
